Steve's repo commit.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Flux Cart</title>
+		<title>React/Flux Cart</title>
 		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
